--- a/skelvanilla/nomoretable.less
+++ b/skelvanilla/nomoretable.less
@@ -47,7 +47,7 @@ only screen and (max-width: @screen-sm) {
         {border: 1px solid @table-border-color;}
     .no-more-table table.ls-answers {border-collapse: separate;}
 
-    .no-more-table .ls-answers .control-label {font-weight: 700;}
+    .no-more-table table.ls-answers .control-label {font-weight: 700;}
     .no-more-table table.ls-answers thead,.no-more-table table.ls-answers .ls-heading{display:none}
 
     .no-more-table table.ls-answers .information-item:empty{display:none}
